# kubernetes-mcp

./: README.md  httpserver.py  pyproject.toml  stdio.py
core/: kubernetes_mcp_core.py
